# resident-evil-4-headtracking

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
scripts/: deploy.ps1  detect-game.ps1  install.cmd  package-release.ps1  release-nightly.ps1  release.ps1  uninstall.cmd  update-deps.ps1
src/: pch.h  plugin_main.cpp
src/camera/: camera_hook.cpp  camera_hook.h  game_state_detector.cpp  game_state_detector.h  math_types.h
src/core/: config.cpp  config.h  constants.h  logger.cpp  logger.h  mod.cpp  mod.h  numeric_utils.h  qpc_clock.h
tests/: math_types_tests.cpp  numeric_utils_tests.cpp
